Bug 694500 - crash CCompositionFile::EnsureHasDataInBuffer. r=dbienvenu